[package]
name = "saboten"
version = "0.1.0"
authors = ["Christian Fischer <christian@chfi.se>"]
description = "Provides biedged graphs, cactus graphs and trees, and an algorithm for finding ultrabubbles in variation graphs."
edition = "2018"
license = "MIT"
repository = "https://github.com/chfi/saboten"
readme = "readme.md"
keywords = ["bioinformatics", "graph"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
progress_bars = ["indicatif"]

[dependencies]
gfa = "0.9"
three-edge-connected = "0.2.1"
petgraph = "0.5.0"
fxhash = "0.2"
fnv = "1.0"
rayon = "1.4"
log = "0.4"
indicatif = { version = "0.15", features = ["rayon"], optional = true }

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "saboten_benches"
harness = false

[profile.bench]
debug = true
