[package]
name = "saboten"
version = "0.2.0"
authors = ["Christian Fischer <christian@chfi.se>"]
description = "Finds and produces snarls and ultrabubbles in variation graphs"
edition = "2021"
license = "MIT"
repository = "https://github.com/chfi/saboten"
readme = "readme.md"
keywords = ["bioinformatics", "graph"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gfa = "0.10"
# three-edge-connected = "0.2.2"
# petgraph = "0.5"
# rustc-hash = "1.1.0"
# fnv = "1.0"
# rayon = "1.4"
# log = "0.4"
# indicatif = { version = "0.15", features = ["rayon"], optional = true }

waragraph-core = { path = "../waragraph/lib" }

bytemuck = { version = "1.4", features = ["derive"] }
roaring = "0.10"
sprs = "0.11"

three-edge-connected = "0.2"